welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: type array
  var gol = new array[Int] (lum+1)
                ^golomb:3: error: not found: type array
  var occ = new array[Int] (lum+1)
                ^